Use URL if file not available.